engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__skill_popup_falls_back_from_bound_skill_with_path_suffix.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› left  [Skill] Example skill used in tests.                                                        "
"                                                                                                    "
"  enter insert · esc close                                                                          "
"                                                                                                    "
"› $left  $bound/path                                                                                "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
